# Alice

./: .gitignore  Procfile  README.md  config.env_sample  migrate_db.py  migrate_session.py  pyproject.toml  requirements.txt
alice/: __init__.py  __main__.py  alice.py  sample_config.py
alice/db/: bot_settings.py  epicgames.py  gog.py  setting.py  steam.py
alice/games/: epicgames.py  gog.py  steam.py
alice/plugins/: forward.py  misc.py  parser.py  raw.py
alice/utils/: backup.py  filters.py  string.py
alice/utils/games/: epicgames.py  gog.py  steam.py
parser/: __init__.py  __main__.py  sample_config.py
