[tool.poetry]
name = "alice"
version = "0.1.0"
description = "Telegram Channel Button Parser/and forwarder (for forum) Bot"
license = "GPL-3.0-or-later"
authors = ["wulan17 <wulan17@nusantararom.org>"]
readme = "README.md"
repository = "https://github.com/Mayuri-Chan/Alice"

[tool.poetry.dependencies]
python = "~=3.9"
async-pymongo = "0.1.2"
uvloop = "^0.17.0"
tgcrypto = "^1.2.5"
apscheduler = {git = "https://github.com/agronholm/apscheduler.git", rev = "master"}
pyrofork = "2.2.1"
requests = "2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
